# understudy

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  pyproject.toml
.claude/skills/understudy/: SKILL.md
.claude/skills/understudy/references/: cli-reference.md
docs/: headless-game-ci-design.md
games/: README.md
games/timberborn/: profile.py
games/timberborn/tests/: test_smoke.py
src/understudy/: __init__.py  _runtime.py  capture.py  cli.py  compare.py  errors.py  input.py  ipc.py  libei_backend.py  profile.py  refs.py  session.py  stack.py  waits.py
src/understudy/scaffold/: profile.py.in
src/understudy/scaffold/tests/: test_smoke.py.in
sway/: headless.conf
systemd/: understudy-sway.service  understudy-wayvnc.service
tests/: conftest.py  test_stack.py
