[project]
name = "understudy"
version = "0.1.0"
description = "Headless game-mod CI runner for Proton-on-Steam — drives sway+gamescope from Python so an AI agent can launch, click, capture, and assert."
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pywayland>=0.4.17",
    "i3ipc>=2.2.1",
    "pystemd>=0.13.2",
    "psutil>=5.9.0",
    "opencv-python-headless>=4.9.0",
    "imagehash>=4.3.1",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.5.0",
]

[project.scripts]
us = "understudy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/understudy"]

[tool.hatch.build.targets.wheel.force-include]
"src/understudy/scaffold" = "understudy/scaffold"

[tool.pytest.ini_options]
testpaths = ["tests", "games"]
addopts = "-ra --strict-markers"
markers = [
    "smoke: §4.3 smoke checks; no game launch required",
    "game: requires a running game session",
]

[tool.ruff]
line-length = 100
target-version = "py311"
